Реализована генеративно-состязательная сеть

--- a/Практические работы/Трансформер/transformer.ipynb
+++ b/Практические работы/Трансформер/transformer.ipynb
@@ -58,9 +58,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'score': 0.00019396506831981242, 'start': 214, 'end': 240, 'answer': ', и, наконец, её ледников.'}\n",
-      "{'score': 0.00021774570632260293, 'start': 405, 'end': 427, 'answer': 'плодоношения отмирают.'}\n",
-      "{'score': 0.00015362862905021757, 'start': 622, 'end': 690, 'answer': ', и галлюциногенные грибы применялись в колдовских языческих обрядах'}\n"
+      "{'score': 0.00023675330157857388, 'start': 682, 'end': 751, 'answer': 'много, особенно в горах; среднее количество более 95 см в год. Летние'}\n",
+      "{'score': 0.00021647482935804874, 'start': 158, 'end': 179, 'answer': 'из семян. Однолетники'}\n",
+      "{'score': 0.00014021845709066838, 'start': 565, 'end': 608, 'answer': 'жабами возникло из-за того, что в древности'}\n"
      ]
     }
    ],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0fe6e989",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "[]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "f2580267",
    "metadata": {},
    "outputs": [
@@ -592,46 +592,46 @@
      "output_type": "stream",
      "text": [
       "Пример точки данных из тренировочной выборки:\n",
-      "{'id': 62310, 'title': 'SberChallenge', 'context': 'В протерозойских отложениях органические остатки встречаются намного чаще, чем в архейских. Они представлены известковыми выделениями сине-зелёных водорослей, ходами червей, остатками кишечнополостных. Кроме известковых водорослей, к числу древнейших растительных остатков относятся скопления графито-углистого вещества, образовавшегося в результате разложения Corycium enigmaticum. В кремнистых сланцах железорудной формации Канады найдены нитевидные водоросли, грибные нити и формы, близкие современным кокколитофоридам. В железистых кварцитах Северной Америки и Сибири обнаружены железистые продукты жизнедеятельности бактерий.', 'question': 'чем представлены органические остатки?', 'answers': {'text': ['известковыми выделениями сине-зелёных водорослей'], 'answer_start': [109]}}\n",
-      "\n",
+      "{\n",
+      "    \"id\": 62310,\n",
+      "    \"title\": \"SberChallenge\",\n",
+      "    \"context\": \"В протерозойских отложениях органические остатки встречаются намного чаще, чем в архейских. Они представлены известковыми выделениями сине-зелёных водорослей, ходами червей, остатками кишечнополостных. Кроме известковых водорослей, к числу древнейших растительных остатков относятся скопления графито-углистого вещества, образовавшегося в результате разложения Corycium enigmaticum. В кремнистых сланцах железорудной формации Канады найдены нитевидные водоросли, грибные нити и формы, близкие современным кокколитофоридам. В железистых кварцитах Северной Америки и Сибири обнаружены железистые продукты жизнедеятельности бактерий.\",\n",
+      "    \"question\": \"чем представлены органические остатки?\",\n",
+      "    \"answer\": {\n",
+      "        \"text\": \"известковыми выделениями сине-зелёных водорослей\",\n",
+      "        \"answer_start\": 109\n",
+      "    }\n",
+      "}\n",
       "ID: 62310\n",
       "title: SberChallenge\n",
       "context: В протерозойских отложениях органические остатки встречаются намного чаще, чем в архейских. Они представлены известковыми выделениями сине-зелёных водорослей, ходами червей, остатками кишечнополостных. Кроме известковых водорослей, к числу древнейших растительных остатков относятся скопления графито-углистого вещества, образовавшегося в результате разложения Corycium enigmaticum. В кремнистых сланцах железорудной формации Канады найдены нитевидные водоросли, грибные нити и формы, близкие современным кокколитофоридам. В железистых кварцитах Северной Америки и Сибири обнаружены железистые продукты жизнедеятельности бактерий.\n",
       "question: чем представлены органические остатки?\n",
       "answer: ['известковыми выделениями сине-зелёных водорослей']\n",
-      "answer_start: [109]\n",
-      "\n",
-      "\n",
-      "========================================================================================================================\n",
-      "\n",
-      "Пример точки данных из тренировочной выборки:\n",
-      "{'id': 28101, 'title': 'SberChallenge', 'context': 'В протерозойских отложениях органические остатки встречаются намного чаще, чем в архейских. Они представлены известковыми выделениями сине-зелёных водорослей, ходами червей, остатками кишечнополостных. Кроме известковых водорослей, к числу древнейших растительных остатков относятся скопления графито-углистого вещества, образовавшегося в результате разложения Corycium enigmaticum. В кремнистых сланцах железорудной формации Канады найдены нитевидные водоросли, грибные нити и формы, близкие современным кокколитофоридам. В железистых кварцитах Северной Америки и Сибири обнаружены железистые продукты жизнедеятельности бактерий.', 'question': 'что найдено в кремнистых сланцах железорудной формации Канады?', 'answers': {'text': ['нитевидные водоросли, грибные нити'], 'answer_start': [438]}}\n",
-      "\n",
-      "ID: 28101\n",
-      "title: SberChallenge\n",
-      "context: В протерозойских отложениях органические остатки встречаются намного чаще, чем в архейских. Они представлены известковыми выделениями сине-зелёных водорослей, ходами червей, остатками кишечнополостных. Кроме известковых водорослей, к числу древнейших растительных остатков относятся скопления графито-углистого вещества, образовавшегося в результате разложения Corycium enigmaticum. В кремнистых сланцах железорудной формации Канады найдены нитевидные водоросли, грибные нити и формы, близкие современным кокколитофоридам. В железистых кварцитах Северной Америки и Сибири обнаружены железистые продукты жизнедеятельности бактерий.\n",
-      "question: что найдено в кремнистых сланцах железорудной формации Канады?\n",
-      "answer: ['нитевидные водоросли, грибные нити']\n",
-      "answer_start: [438]\n"
+      "answer_start: [109]\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "def print_pretty_sample(sample):\n",
+    "    formatted_sample = {\n",
+    "        \"id\": sample[\"id\"],\n",
+    "        \"title\": sample[\"title\"],\n",
+    "        \"context\": sample[\"context\"],\n",
+    "        \"question\": sample[\"question\"],\n",
+    "        \"answer\": {\n",
+    "            \"text\": sample[\"answers\"][\"text\"][0],\n",
+    "            \"answer_start\": sample[\"answers\"][\"answer_start\"][0]\n",
+    "        }\n",
+    "    }\n",
+    "    print(json.dumps(formatted_sample, indent=4, ensure_ascii=False))\n",
+    "\n",
+    "\n",
     "sample = dataset[\"train\"][0]\n",
     "print(\"Пример точки данных из тренировочной выборки:\")\n",
-    "print(sample, end = '\\n\\n')\n",
-    "print(f\"ID: {sample['id']}\")\n",
-    "print(f\"title: {sample['title']}\")\n",
-    "print(f\"context: {sample['context']}\")\n",
-    "print(f\"question: {sample['question']}\")\n",
-    "print(f\"answer: {sample['answers']['text']}\")\n",
-    "print(f\"answer_start: {sample['answers']['answer_start']}\")\n",
-    "\n",
-    "print('\\n\\n' + '=' * 120, end = '\\n\\n')\n",
-    "\n",
-    "sample = dataset[\"train\"][1]\n",
-    "print(\"Пример точки данных из тренировочной выборки:\")\n",
-    "print(sample, end = '\\n\\n')\n",
+    "print_pretty_sample(dataset[\"train\"][0])\n",
     "print(f\"ID: {sample['id']}\")\n",
     "print(f\"title: {sample['title']}\")\n",
     "print(f\"context: {sample['context']}\")\n",
